--- a/nikodemgabler.com/style.css
+++ b/nikodemgabler.com/style.css
@@ -24,6 +24,7 @@ nav {
     padding: 2.5rem;
     /* border-bottom: 1px solid white; */
     position: relative;
+    z-index: 9999;
 }
 
 nav a {
@@ -117,6 +118,7 @@ ul.active {
         display: flex;
         position: relative;
         width: 55%;
+        height: 100%;
         justify-content: space-around;
         align-items: center;
         flex-direction: row;
