--- a/nikodemgabler.com/aboutme.css
+++ b/nikodemgabler.com/aboutme.css
@@ -1,5 +1,6 @@
 body{
     height: 100%;
+    overflow: hidden;
 }
 
 .main-section-aboutme{
@@ -24,8 +25,10 @@ body{
 }
 
 .main-section-aboutme h3 {
-    font-size: 20px;
+    font-size: 22px;
     line-height: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
 }
 
 .main-section-aboutme h4 {
@@ -33,7 +36,7 @@ body{
 }
 
 .main-section-aboutme p {
-    font-size: 12px;
+    font-size: 14px;
     text-align: justify;
 }
 
@@ -41,6 +44,18 @@ body{
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.main-section-aboutme .arrow-up {
+    position: absolute;
+    top: -7em;
+    right: -6%;
+    width: 0; 
+    height: 0; 
+    border-left: 60vw solid transparent;
+    z-index: -1;
+    
+    border-bottom: 131vh solid rgb(148, 148, 255);
+  }
 
 @media screen and (min-width: 767px) {
     .main-section-aboutme{
