--- a/nikodemgabler.com/blog.css
+++ b/nikodemgabler.com/blog.css
@@ -1,14 +1,14 @@
-
 .main-section-blog{ 
     margin-right: 5%;
     margin-left: 5%;
-    /* width: 90vw;
+    /* width: 90vw; */
     display: flex;
-    flex-direction: column; */
+    flex-direction: column;
 }
 
 .main-section-blog h1{
     font-size: 48px;
+    grid-area: h1;
 }
 
 .main-section-blog article{ 
@@ -31,17 +31,62 @@
 
 .main-section-blog article .image-link{
     display: block;
-    height: 30%;
+    height: 25vh;
     overflow: hidden;
     border-radius: 15px;
 }
 
 .main-section-blog article .image-link img{
     width: 100%;
-    height: 30%;
+    height: 100%;
     transition: .3s ease-in-out;
 }
 
 .main-section-blog article .image-link img:hover { 
     transform: scale(1.1);
+}
+
+
+
+@media screen and (min-width: 568px) {
+    
+    .main-section-blog {
+        display: grid;
+        grid-template-areas:
+        "h1 h1";
+        justify-content: space-between;
+        grid-gap: 30px;
+    }
+
+    .main-section-blog article{ 
+        margin-top: 0px;
+        width: 100%;
+    }
+
+    .main-section-blog .first-blog-article {
+        margin-top: 0px;
+    }
+
+}
+
+
+@media screen and (min-width: 1024px) {
+    
+    .main-section-blog {
+        display: grid;
+        grid-template-areas:
+        "h1 h1 h1";
+        justify-content: space-between;
+        grid-gap: 30px;
+    }
+
+    .main-section-blog article{ 
+        margin-top: 0px;
+        width: 100%;
+    }
+
+    .main-section-blog .first-blog-article {
+        margin-top: 0px;
+    }
+
 }
