--- a/nikodemgabler.com/style.css
+++ b/nikodemgabler.com/style.css
@@ -21,10 +21,13 @@ nav {
     justify-content: space-between;
     align-items: center;
     height: 2vh;
-    padding: 2.5rem;
+    padding: 3.5rem 0 3.5rem 0;
     /* border-bottom: 1px solid white; */
     position: relative;
     z-index: 9999;
+    margin-right: 5%;
+    margin-left: 5%;
+
 }
 
 nav a {
@@ -154,7 +157,7 @@ ul.active {
     }
     
     .main-nav ul li a:hover::after{
-        width: 100%;
+        width: 95%;
     }
 
     .main-nav ul li:last-child a{
