--- a/nikodemgabler.com/style2.css
+++ b/nikodemgabler.com/style2.css
@@ -64,27 +64,20 @@ body{
 }
 
 @media screen and (min-width: 1000px) {
-    .main-section .my-photo {
-        z-index: 1;
-        width: 35%;
-        height: 80%;
-  
-        position: absolute;
-        right: -6%;
-        bottom: -2%;
 
-        object-fit: cover;
-        object-position: center center;
-        opacity: 1;
-        transition: opacity 500ms ease 0s;
+    .my-photo{
+         width: 55vh;
+         z-index: 1;
+         height: 100%;
+         position: absolute;
+         right: 0;
+         bottom: 0;
+         text-align: end;
 
-        text-align: center;
-        text-justify: center;
-    }
-  
-    .main-section .my-photo img{
-        display: block;
-        width: 100%;
-        height: 100%;
+
+         background-image: url("images/Nikodem-Gabler-zdjecie.png");
+         background-size: 100%;
+         background-repeat: no-repeat;
+         background-position: bottom;
     }
 }
