--- a/nikodemgabler.com/style.css
+++ b/nikodemgabler.com/style.css
@@ -4,6 +4,7 @@ body{
     box-sizing: border-box;
     background-color: black;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 html{
@@ -42,18 +43,17 @@ nav a {
 .main-nav ul {
     position: absolute;
     display: flex;
-    width: 100%;
-    right: 0;
+    width: 100vw;
+    right: -6%;
     top: 60px;
-    height: 92vh;
+    height: 95vh;
     flex-direction: column;
     text-align: center;
     transform:translate(100%);
     transition: .5s ease-in-out;
     justify-content: space-around;
     list-style-type: none;
-
-    
+    margin: 0;
 }
 ul.active {
     transform: translate(0%);
@@ -126,7 +126,7 @@ ul.active {
         align-items: center;
         flex-direction: row;
         top: 0;
-
+        margin-right: 5%;
         transform: translate(0%);
     }
 
