--- a/nikodemgabler.com/styles/style2.css
+++ b/nikodemgabler.com/styles/style2.css
@@ -47,7 +47,7 @@ body{
     width: 0; 
     height: 0; 
     border-left: 60vw solid transparent;
-    
+    z-index: -1;
     border-bottom: 110vh solid rgb(148, 148, 255);
   }
   
@@ -75,7 +75,7 @@ body{
          text-align: end;
 
 
-         background-image: url("images/Nikodem-Gabler-zdjecie.png");
+         background-image: url("../images/Nikodem-Gabler-zdjecie.png");
          background-size: 100%;
          background-repeat: no-repeat;
          background-position: bottom;
